added test folder preds and logo

--- a/steel_deploy.ipynb
+++ b/steel_deploy.ipynb
@@ -25,15 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#![Steel Industry](img.jpg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#hide\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,40 +42,25 @@
     "import cv2\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interact_manual, interactive, VBox, HBox\n",
-    "from IPython.display import Image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from IPython.display import Image\n",
+    "\n",
     "def opt_func(params, **kwargs): return OptimWrapper(params, torch.optim.Adam, **kwargs)\n",
     "def splitter(m): return convert_params([[m.encoder], [m.decoder], [m.segmentation_head]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exported_model_url = \"https://www.dropbox.com/s/f52j2u4trox0i6o/efficientnet-b2.pkl?dl=1\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "exported_model_url = \"https://www.dropbox.com/s/f52j2u4trox0i6o/efficientnet-b2.pkl?dl=1\"\n",
     "exported_model = download_data(exported_model_url, \"export.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,75 +69,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imgid_list = [o.name for o in train_pfiles]\n",
-    "imgid_cond = train.ImageId.isin(imgid_list)\n",
-    "df = train.loc[imgid_cond]\n",
-    "imgid_elements = df.ImageId.drop_duplicates().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hide_output\n",
-    "style = {'description_width': 'initial'}\n",
-    "imgid_dropdown = widgets.Dropdown(options=imgid_elements, index=0, description=\"Select an Image:\", style=style)\n",
-    "lbl_pred = widgets.Label()\n",
-    "out_pl = widgets.Output()\n",
-    "btn_run = widgets.Button(description='Detect')\n",
-    "btn_run.style.button_color = 'lightgreen'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hide_output\n",
-    "btn_upload = widgets.FileUpload(multiple=False)\n",
-    "\n",
-    "lbl_pred_upload = widgets.Label()\n",
-    "out_pl_upload = widgets.Output()\n",
-    "\n",
-    "btn_run_upload = widgets.Button(description='Detect')\n",
-    "btn_run_upload.style.button_color = 'lightgreen'\n",
-    "\n",
-    "clear_upload = widgets.Button(description='Clear', button_style='danger')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_defects(preds) -> str:\n",
+    "# prediction\n",
+    "  \n",
+    "def get_label_defects(preds: torch.Tensor, groundtruth:bool=False) -> str:   \n",
     "    preds = preds.float()\n",
-    "    \n",
     "    zero_preds = torch.zeros(tuple(preds.shape)[1:])\n",
     "    detected_defects = torch.cat([zero_preds.unsqueeze(axis=0), preds])\n",
     "    idx_defects = detected_defects.argmax(0).unique()\n",
     "    argmax_defects = list(np.sort(idx_defects.numpy()))\n",
+    "    \n",
     "    types_defects = [str(o) for o in argmax_defects][1:]\n",
     "    n_defects = len(types_defects)\n",
     "    \n",
     "    defects_word = \"defects\" if n_defects!=1 else \"defect\"\n",
     "    types_word = \"types\" if n_defects!=1 else \"type\"\n",
+    "    preds_word = \"Ground truth\" if groundtruth else \"Predicted\"\n",
     "    if n_defects > 0:\n",
-    "        return f\"Predicted: n°{n_defects} {defects_word} of {types_word}: {' '.join(types_defects)}\"\n",
+    "        return f\"{preds_word}: n°{n_defects} {defects_word} of {types_word}: {' '.join(types_defects)}\"\n",
     "    else:\n",
-    "        return f\"Predicted: n°0 {defects_word}\"\n",
+    "        return f\"{preds_word}: n°0 {defects_word}\"\n",
     "\n",
-    "def segment_img(img, out_widget, lbl_widget, groundtruth=None):\n",
+    "def segment_img(img, out_widget, lbl_widget, gt=None, gt_label=None):\n",
     "    rles, preds, probs = learner.predict(img)\n",
-    "    title = get_defects(preds)\n",
+    "    lbl_widget.value = get_label_defects(preds)    \n",
+    "    \n",
     "    img_np = np.array(img)\n",
     "    w,h,_ = img_np.shape\n",
     "    \n",
@@ -169,78 +104,167 @@
     "    with out_widget: \n",
     "        plot_mask_image(\"Original\", img_np, np.zeros((w,h,4)))\n",
     "        \n",
-    "        if not (groundtruth is None): \n",
-    "            plot_mask_image(\"Ground Truth\", img_np, groundtruth)\n",
+    "        if not ((gt is None) or (gt_label is None)):\n",
+    "            gt_label.value = get_label_defects(\n",
+    "                torch.Tensor(gt).permute(2,0,1), \n",
+    "                groundtruth=True\n",
+    "            )\n",
+    "            plot_mask_image(\"Ground Truth\", img_np, gt)\n",
     "            \n",
-    "        plot_mask_image(\"Predicted\", np.array(img), preds.permute(1,2,0).float().numpy())\n",
-    "        \n",
-    "    lbl_widget.value = title\n",
-    "    \n",
-    "def on_click_detect(change):\n",
-    "    img = PILImage.create(btn_upload.data[-1]) # new release .content.tobytes()\n",
-    "    segment_img(img, out_pl_upload, lbl_pred_upload)\n",
-    "    \n",
-    "def on_click_clear(change):\n",
-    "    btn_upload._counter = 0\n",
-    "    btn_upload.value.clear()\n",
-    "    out_pl_upload.clear_output()\n",
-    "    lbl_pred_upload.value = \"\"\n",
-    "        \n",
-    "btn_run_upload.on_click(on_click_detect)\n",
-    "clear_upload.on_click(on_click_clear)"
+    "        plot_mask_image(\"Predicted\", np.array(img), preds.permute(1,2,0).float().numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "upload_label = widgets.Label('Upload an image and detect steel defects with a Deep Learning segmentation model')\n",
-    "upload_box = VBox([upload_label, \n",
-    "                   HBox([btn_upload, btn_run_upload, clear_upload]),\n",
-    "                   lbl_pred_upload, \n",
-    "                   out_pl_upload])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def on_change_show(change):\n",
-    "    imageid = imgid_dropdown.value    \n",
+    "def get_imgid_list(img_path):\n",
+    "    return [o.name for o in img_path]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training images with ground truth\n",
+    "\n",
+    "# Description\n",
+    "description_train = widgets.Label('Select an image and compare the prediction with the \"ground truth\"')\n",
+    "\n",
+    "# Dropdown element\n",
+    "style = {'description_width': 'initial'}\n",
+    "imgid_elements_train = get_imgid_list(train_pfiles)\n",
+    "imgid_dropdown_train = widgets.Dropdown(\n",
+    "    options=imgid_elements_train, index=0, description=\"Select an Image:\", style=style)\n",
+    "# Detect button\n",
+    "btn_run_train = widgets.Button(description='Detect')\n",
+    "btn_run_train.style.button_color = 'lightgreen'\n",
+    "# Label for text output groundtruth\n",
+    "lbl_ground_train = widgets.Label()\n",
+    "# Label for text output\n",
+    "lbl_pred_train = widgets.Label()\n",
+    "# Plot output\n",
+    "out_pl_train = widgets.Output()\n",
+    "\n",
+    "# final GUI\n",
+    "training_box = VBox([\n",
+    "    description_train,\n",
+    "    HBox([imgid_dropdown_train, btn_run_train]), \n",
+    "    lbl_ground_train,\n",
+    "    lbl_pred_train,\n",
+    "    out_pl_train], \n",
+    "    style=style\n",
+    ")\n",
+    "\n",
+    "# Actions\n",
+    "def on_change_detect_train(change):\n",
+    "    imageid = imgid_dropdown_train.value    \n",
     "    _, mask = make_mask(imageid)\n",
     "    \n",
     "    image_np = cv2.imread(str(train_path/imageid))\n",
     "    img = PILImage.create(image_np)\n",
     "    \n",
-    "    segment_img(img, out_pl, lbl_pred, groundtruth=mask)\n",
+    "    segment_img(img, out_pl_train, lbl_pred_train, gt=mask, gt_label=lbl_ground_train)\n",
     "    \n",
-    "btn_run.on_click(on_change_show)\n",
-    "imgid_dropdown.observe(on_change_show, names='value')"
+    "btn_run_train.on_click(on_change_detect_train)\n",
+    "imgid_dropdown_train.observe(on_change_detect_train, names='value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "multi_choice_label = widgets.Label('Upload an image and detect steel defects with a Deep Learning segmentation model')\n",
-    "multi_choice_box = VBox([HBox([imgid_dropdown, btn_run]), \n",
-    "                         lbl_pred,\n",
-    "                         out_pl], style=style)"
+    "# Test images\n",
+    "\n",
+    "# Description\n",
+    "description_test = widgets.Label('Select an image from the test set (no ground truth)')\n",
+    "\n",
+    "# Dropdown element\n",
+    "style = {'description_width': 'initial'}\n",
+    "imgid_elements_test = get_imgid_list(test_pfiles)\n",
+    "imgid_dropdown_test = widgets.Dropdown(\n",
+    "    options=imgid_elements_test, index=0, description=\"Select an Image:\", style=style)\n",
+    "# Detect button\n",
+    "btn_run_test = widgets.Button(description='Detect')\n",
+    "btn_run_test.style.button_color = 'lightgreen'\n",
+    "# Label for text output predictions\n",
+    "lbl_pred_test = widgets.Label()\n",
+    "# Plot output\n",
+    "out_pl_test = widgets.Output()\n",
+    "\n",
+    "# final GUI\n",
+    "testing_box = VBox([\n",
+    "    description_test,\n",
+    "    HBox([imgid_dropdown_test, btn_run_test]), \n",
+    "    lbl_pred_test,\n",
+    "    out_pl_test], \n",
+    "    style=style)\n",
+    "\n",
+    "# Actions\n",
+    "def on_change_detect_test(change):\n",
+    "    imageid = imgid_dropdown_test.value    \n",
+    "    \n",
+    "    image_np = cv2.imread(str(test_path/imageid))\n",
+    "    img = PILImage.create(image_np)\n",
+    "    \n",
+    "    segment_img(img, out_pl_test, lbl_pred_test)\n",
+    "    \n",
+    "btn_run_test.on_click(on_change_detect_test)\n",
+    "imgid_dropdown_test.observe(on_change_detect_test, names='value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Upload\n",
+    "\n",
+    "# Description\n",
+    "description_label_upload = widgets.Label('Upload an image and detect')\n",
+    "# Upload button\n",
+    "btn_upload = widgets.FileUpload(multiple=False)\n",
+    "# Detect button\n",
+    "btn_run_upload = widgets.Button(description='Detect')\n",
+    "btn_run_upload.style.button_color = 'lightgreen'\n",
+    "# Clear button\n",
+    "clear_upload = widgets.Button(description='Clear', button_style='danger')\n",
+    "# Label for text output\n",
+    "lbl_pred_upload = widgets.Label()\n",
+    "# Plot output\n",
+    "out_pl_upload = widgets.Output()\n",
+    "\n",
+    "# final GUI\n",
+    "upload_box = VBox([description_label_upload, \n",
+    "                   HBox([btn_upload, btn_run_upload, clear_upload]),\n",
+    "                   lbl_pred_upload, \n",
+    "                   out_pl_upload])\n",
+    "\n",
+    "# Actions\n",
+    "def on_click_detect_uploaded(change):\n",
+    "    img = PILImage.create(btn_upload.data[-1]) # new release .content.tobytes()\n",
+    "    segment_img(img, out_pl_upload, lbl_pred_upload)\n",
+    "    \n",
+    "def on_click_clear_uploaded(change):\n",
+    "    btn_upload._counter = 0\n",
+    "    btn_upload.value.clear()\n",
+    "    out_pl_upload.clear_output()\n",
+    "    lbl_pred_upload.value = \"\"\n",
+    "        \n",
+    "btn_run_upload.on_click(on_click_detect_uploaded)\n",
+    "clear_upload.on_click(on_click_clear_uploaded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,18 +277,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "816abb9171534bb3b17f89f4506db9bf",
+       "model_id": "f272a99acae94b619df7b1133943a712",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(VBox(children=(HBox(children=(Dropdown(description='Select an Image:', options=('72aaba8ad…"
+       "Accordion(children=(VBox(children=(Label(value='Select an image and compare the prediction with the \"ground tr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -282,10 +346,21 @@
     }
    ],
    "source": [
-    "accordion = widgets.Accordion(children=[multi_choice_box, upload_box])\n",
-    "accordion.set_title(0, 'Compare results')\n",
-    "accordion.set_title(1, 'Upload validation')\n",
+    "accordion = widgets.Accordion(\n",
+    "    children=[training_box, testing_box, upload_box])\n",
+    "\n",
+    "accordion.set_title(0, 'Training images with ground truth')\n",
+    "accordion.set_title(1, 'Test images validation')\n",
+    "accordion.set_title(2, 'Upload validation')\n",
+    "#accordion.set_title(2, 'Test validation')\n",
     "accordion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![logo](logo.jpg)"
    ]
   }
  ],
