--- a/steel_deploy.ipynb
+++ b/steel_deploy.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +89,12 @@
     "    types_word = \"types\" if n_defects!=1 else \"type\"\n",
     "    preds_word = \"Ground truth\" if groundtruth else \"Predicted\"\n",
     "    if n_defects > 0:\n",
-    "        return f\"{preds_word}: n°{n_defects} {defects_word} of {types_word}: {' '.join(types_defects)}\"\n",
+    "        return f\"<b>{preds_word}</b>: n°<i>{n_defects}</i> {defects_word} of {types_word}: <i>{' '.join(types_defects)}</i>\"\n",
     "    else:\n",
-    "        return f\"{preds_word}: n°0 {defects_word}\"\n",
+    "        return f\"<b>{preds_word}</b>: n°0 {defects_word}\"\n",
     "\n",
-    "def segment_img(img, out_widget, lbl_widget, gt=None, gt_label=None):\n",
+    "def segment_img(img, out_widget, lbl_widget, gt_mask=None, gt_label=None):\n",
     "    rles, preds, probs = learner.predict(img)\n",
-    "    lbl_widget.value = get_label_defects(preds)    \n",
     "    \n",
     "    img_np = np.array(img)\n",
     "    w,h,_ = img_np.shape\n",
@@ -104,19 +103,19 @@
     "    with out_widget: \n",
     "        plot_mask_image(\"Original\", img_np, np.zeros((w,h,4)))\n",
     "        \n",
-    "        if not ((gt is None) or (gt_label is None)):\n",
+    "        if not ((gt_mask is None) or (gt_label is None)):\n",
     "            gt_label.value = get_label_defects(\n",
-    "                torch.Tensor(gt).permute(2,0,1), \n",
-    "                groundtruth=True\n",
-    "            )\n",
-    "            plot_mask_image(\"Ground Truth\", img_np, gt)\n",
+    "                torch.Tensor(gt_mask).permute(2,0,1), \n",
+    "                groundtruth=True) + \" | \"\n",
+    "            plot_mask_image(\"Ground Truth\", img_np, gt_mask)\n",
     "            \n",
+    "        lbl_widget.value = get_label_defects(preds)      \n",
     "        plot_mask_image(\"Predicted\", np.array(img), preds.permute(1,2,0).float().numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +143,9 @@
     "btn_run_train = widgets.Button(description='Detect')\n",
     "btn_run_train.style.button_color = 'lightgreen'\n",
     "# Label for text output groundtruth\n",
-    "lbl_ground_train = widgets.Label()\n",
+    "lbl_ground_train = widgets.HTML() #widgets.Label()\n",
     "# Label for text output\n",
-    "lbl_pred_train = widgets.Label()\n",
+    "lbl_pred_train = widgets.HTML() #widgets.Label()\n",
     "# Plot output\n",
     "out_pl_train = widgets.Output()\n",
     "\n",
@@ -154,9 +153,11 @@
     "training_box = VBox([\n",
     "    description_train,\n",
     "    HBox([imgid_dropdown_train, btn_run_train]), \n",
-    "    lbl_ground_train,\n",
-    "    lbl_pred_train,\n",
-    "    out_pl_train], \n",
+    "    HBox([\n",
+    "        lbl_ground_train,\n",
+    "        lbl_pred_train\n",
+    "    ]),\n",
+    "    out_pl_train],\n",
     "    style=style\n",
     ")\n",
     "\n",
@@ -168,7 +169,7 @@
     "    image_np = cv2.imread(str(train_path/imageid))\n",
     "    img = PILImage.create(image_np)\n",
     "    \n",
-    "    segment_img(img, out_pl_train, lbl_pred_train, gt=mask, gt_label=lbl_ground_train)\n",
+    "    segment_img(img, out_pl_train, lbl_pred_train, gt_mask=mask, gt_label=lbl_ground_train)\n",
     "    \n",
     "btn_run_train.on_click(on_change_detect_train)\n",
     "imgid_dropdown_train.observe(on_change_detect_train, names='value')"
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +195,7 @@
     "btn_run_test = widgets.Button(description='Detect')\n",
     "btn_run_test.style.button_color = 'lightgreen'\n",
     "# Label for text output predictions\n",
-    "lbl_pred_test = widgets.Label()\n",
+    "lbl_pred_test = widgets.HTML() #widgets.Label()\n",
     "# Plot output\n",
     "out_pl_test = widgets.Output()\n",
     "\n",
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +238,7 @@
     "# Clear button\n",
     "clear_upload = widgets.Button(description='Clear', button_style='danger')\n",
     "# Label for text output\n",
-    "lbl_pred_upload = widgets.Label()\n",
+    "lbl_pred_upload = widgets.HTML() #widgets.Label()\n",
     "# Plot output\n",
     "out_pl_upload = widgets.Output()\n",
     "\n",
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,48 +278,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f272a99acae94b619df7b1133943a712",
+       "model_id": "471bd9ba37fc4dfda504eaede9c00689",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Accordion(children=(VBox(children=(Label(value='Select an image and compare the prediction with the \"ground tr…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
