--- a/steel_deploy.ipynb
+++ b/steel_deploy.ipynb
@@ -1,27 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#hide\n",
-    "#all_slow"
+    "<img style=\"float: right\" width=\"150\" height=\"150\" src=\"logo.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Steel Defect Detection\n",
+    "# Rilevamento difetti superficiali nell’acciaio\n",
     "\n",
-    "> POC from multiple Severstal Kaggle Competition solutions."
+    "> Caso d'uso di IP4FVG - Nodo Data Analytics and Artificial Intelligence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Questa applicazione permette di classificare e individuare difetti superficiali dell'acciaio attraverso l'utilizzo di algoritmi di Deep Learning per il *machine vision* (segmentazione immagini)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,36 +49,124 @@
     "from IPython.display import Image\n",
     "\n",
     "def opt_func(params, **kwargs): return OptimWrapper(params, torch.optim.Adam, **kwargs)\n",
-    "def splitter(m): return convert_params([[m.encoder], [m.decoder], [m.segmentation_head]])"
+    "def splitter(m): return convert_params([[m.encoder], [m.decoder], [m.segmentation_head]])\n",
+    "\n",
+    "style = {'description_width': 'initial'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exported_model_url = \"https://www.dropbox.com/s/f52j2u4trox0i6o/efficientnet-b2.pkl?dl=1\"\n",
-    "exported_model = download_data(exported_model_url, \"export.pkl\")"
+    "# loading data and models\n",
+    "data_url = \"https://www.dropbox.com/s/wzdtphbtaouaet5/data.zip?dl=1\"\n",
+    "data_path = untar_data(data_url, fname=\"data.zip\", dest=\".\")\n",
+    "\n",
+    "effnet_model_url = \"https://www.dropbox.com/s/f52j2u4trox0i6o/efficientnet-b2.pkl?dl=1\"\n",
+    "effnet_model_path = download_data(effnet_model_url, \"effnet_export.pkl\")\n",
+    "resnet_model_url = \"https://www.dropbox.com/s/qumn1dshh9b0154/resnet_export.pkl?dl=1\"\n",
+    "resnet_model_path = download_data(resnet_model_url, \"resnet_export.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "learner = load_learner(exported_model, cpu=True)"
+    "# config selection\n",
+    "models = [effnet_model_path, resnet_model_path]\n",
+    "\n",
+    "def select_learner(selection):\n",
+    "    return load_learner(models[selection], cpu=True)\n",
+    "\n",
+    "model_radio = widgets.RadioButtons(\n",
+    "    options=[\n",
+    "        (\"Model 1\", 0), \n",
+    "        (\"Model 2\", 1)\n",
+    "    ],\n",
+    "    value=1,\n",
+    "    description=\"Deep Learning model:\",\n",
+    "    style=style\n",
+    ")\n",
+    "\n",
+    "thresh_sel = widgets.FloatSlider(\n",
+    "    value=0.5,\n",
+    "    min=0.,\n",
+    "    max=1.,\n",
+    "    step=0.1,\n",
+    "    description='Threshold:',\n",
+    "    disabled=False,\n",
+    "    continuous_update=False,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True,\n",
+    "    readout_format='.1f',\n",
+    "    style=style\n",
+    ")\n",
+    "\n",
+    "pixels_sel = widgets.IntSlider(\n",
+    "    value=0,\n",
+    "    min=0,\n",
+    "    max=5000,\n",
+    "    step=100,\n",
+    "    description='Minimum pixel for defects:',\n",
+    "    disabled=False,\n",
+    "    continuous_update=False,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True,\n",
+    "    readout_format='d',\n",
+    "    style=style\n",
+    ")\n",
+    "\n",
+    "learner = select_learner(model_radio.value)\n",
+    "\n",
+    "def on_change_model(change):\n",
+    "    global learner\n",
+    "    learner = select_learner(model_radio.value)\n",
+    "model_radio.observe(on_change_model, names='value')\n",
+    "\n",
+    "config_box = VBox([\n",
+    "    model_radio,\n",
+    "    thresh_sel,\n",
+    "    pixels_sel\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# prediction\n",
-    "  \n",
+    "def post_process(probability, threshold, min_size):\n",
+    "    \"\"\"\n",
+    "    Post processing of each predicted mask, components with lesser number of pixels\n",
+    "    than `min_size` are ignored.\n",
+    "    \"\"\"\n",
+    "    def post_process_channel(p):\n",
+    "        mask = cv2.threshold(p, threshold, 1, cv2.THRESH_BINARY)[1]\n",
+    "        num_component, component = cv2.connectedComponents(mask.astype(np.uint8))\n",
+    "        predictions = np.zeros((256, 1600), np.float32)\n",
+    "\n",
+    "        for c in range(1, num_component):\n",
+    "            p = (component == c)\n",
+    "            if p.sum() > min_size:\n",
+    "                predictions[p] = 1\n",
+    "\n",
+    "        return torch.Tensor(predictions)\n",
+    "    \n",
+    "    preds_list = []\n",
+    "    probs = probability.numpy()\n",
+    "    n = probs.shape[0]\n",
+    "    for ch in range(n):\n",
+    "        prob = post_process_channel(probs[ch])\n",
+    "        preds_list.append(prob)\n",
+    "    \n",
+    "    return torch.stack(preds_list, dim=0)\n",
+    "\n",
     "def get_label_defects(preds: torch.Tensor, groundtruth:bool=False) -> str:   \n",
     "    preds = preds.float()\n",
     "    zero_preds = torch.zeros(tuple(preds.shape)[1:])\n",
@@ -93,7 +185,15 @@
     "    else:\n",
     "        return f\"<b>{preds_word}</b>: n°0 {defects_word}\"\n",
     "\n",
-    "def segment_img(img, out_widget, lbl_widget, gt_mask=None, gt_label=None):\n",
+    "def segment_img(\n",
+    "    img, \n",
+    "    out_widget, lbl_widget, \n",
+    "    thresh_sel, pixels_sel,\n",
+    "    gt_mask=None, gt_label=None\n",
+    "):\n",
+    "    threshold = thresh_sel.value\n",
+    "    min_size = pixels_sel.value\n",
+    "    \n",
     "    rles, preds, probs = learner.predict(img)\n",
     "    \n",
     "    img_np = np.array(img)\n",
@@ -109,33 +209,26 @@
     "                groundtruth=True) + \" | \"\n",
     "            plot_mask_image(\"Ground Truth\", img_np, gt_mask)\n",
     "            \n",
-    "        lbl_widget.value = get_label_defects(preds)      \n",
-    "        plot_mask_image(\"Predicted\", np.array(img), preds.permute(1,2,0).float().numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        post_processed_preds = post_process(probs, threshold, min_size)\n",
+    "        lbl_widget.value = get_label_defects(post_processed_preds)      \n",
+    "        plot_mask_image(\"Predicted\", np.array(img), post_processed_preds.permute(1,2,0).float().numpy())\n",
+    "        \n",
     "def get_imgid_list(img_path):\n",
     "    return [o.name for o in img_path]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training images with ground truth\n",
     "\n",
     "# Description\n",
-    "description_train = widgets.Label('Select an image and compare the prediction with the \"ground truth\"')\n",
+    "description_train = widgets.Label('Predict the defects and compare the results with the labels (ground truth).')\n",
     "\n",
     "# Dropdown element\n",
-    "style = {'description_width': 'initial'}\n",
     "imgid_elements_train = get_imgid_list(train_pfiles)\n",
     "imgid_dropdown_train = widgets.Dropdown(\n",
     "    options=imgid_elements_train, index=0, description=\"Select an Image:\", style=style)\n",
@@ -169,7 +262,12 @@
     "    image_np = cv2.imread(str(train_path/imageid))\n",
     "    img = PILImage.create(image_np)\n",
     "    \n",
-    "    segment_img(img, out_pl_train, lbl_pred_train, gt_mask=mask, gt_label=lbl_ground_train)\n",
+    "    segment_img(\n",
+    "        img, \n",
+    "        out_pl_train, lbl_pred_train, \n",
+    "        thresh_sel, pixels_sel, \n",
+    "        gt_mask=mask, gt_label=lbl_ground_train\n",
+    "    )\n",
     "    \n",
     "btn_run_train.on_click(on_change_detect_train)\n",
     "imgid_dropdown_train.observe(on_change_detect_train, names='value')"
@@ -177,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test images\n",
     "\n",
     "# Description\n",
-    "description_test = widgets.Label('Select an image from the test set (no ground truth)')\n",
+    "description_test = widgets.Label('Predict the defects from test images (without labels).')\n",
     "\n",
     "# Dropdown element\n",
     "style = {'description_width': 'initial'}\n",
@@ -214,7 +312,11 @@
     "    image_np = cv2.imread(str(test_path/imageid))\n",
     "    img = PILImage.create(image_np)\n",
     "    \n",
-    "    segment_img(img, out_pl_test, lbl_pred_test)\n",
+    "    segment_img(\n",
+    "        img, \n",
+    "        out_pl_test, lbl_pred_test,\n",
+    "        thresh_sel, pixels_sel\n",
+    "    )\n",
     "    \n",
     "btn_run_test.on_click(on_change_detect_test)\n",
     "imgid_dropdown_test.observe(on_change_detect_test, names='value')"
@@ -222,14 +324,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Upload\n",
     "\n",
     "# Description\n",
-    "description_label_upload = widgets.Label('Upload an image and detect')\n",
+    "description_label_upload = widgets.Label('Upload an image and predict the defects.')\n",
     "# Upload button\n",
     "btn_upload = widgets.FileUpload(multiple=False)\n",
     "# Detect button\n",
@@ -251,7 +353,11 @@
     "# Actions\n",
     "def on_click_detect_uploaded(change):\n",
     "    img = PILImage.create(btn_upload.data[-1]) # new release .content.tobytes()\n",
-    "    segment_img(img, out_pl_upload, lbl_pred_upload)\n",
+    "    segment_img(\n",
+    "        img, \n",
+    "        out_pl_upload, lbl_pred_upload,\n",
+    "        thresh_sel, pixels_sel\n",
+    "    )\n",
     "    \n",
     "def on_click_clear_uploaded(change):\n",
     "    btn_upload._counter = 0\n",
@@ -265,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,38 +384,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "471bd9ba37fc4dfda504eaede9c00689",
+       "model_id": "2a692dfd0ec943e9b1f085d111d50286",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Accordion(children=(VBox(children=(Label(value='Select an image and compare the prediction with the \"ground tr…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "Accordion(children=(VBox(children=(RadioButtons(description='Select a model:', index=1, options=(('Model 1', 0…"
       ]
      },
      "metadata": {},
@@ -317,13 +405,16 @@
     }
    ],
    "source": [
-    "accordion = widgets.Accordion(\n",
-    "    children=[training_box, testing_box, upload_box])\n",
+    "box_lbls = ['Configuration', 'Detect and compare', 'Validate', 'Upload']\n",
     "\n",
-    "accordion.set_title(0, 'Training images with ground truth')\n",
-    "accordion.set_title(1, 'Test images validation')\n",
-    "accordion.set_title(2, 'Upload validation')\n",
-    "#accordion.set_title(2, 'Test validation')\n",
+    "accordion = widgets.Accordion(\n",
+    "    children=[config_box, training_box, testing_box, upload_box],\n",
+    "    selected_index=1\n",
+    ")\n",
+    "\n",
+    "for i, lbl in enumerate(box_lbls):\n",
+    "    accordion.set_title(i, lbl)\n",
+    "\n",
     "accordion"
    ]
   },
@@ -331,7 +422,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![logo](logo.jpg)"
+    "\n",
+    "\n",
+    "**Riferimenti:**\n",
+    "- Documentazione tecnica: [steel_segmentation](https://marcomatteo.github.io/steel_segmentation/)\n",
+    "- Dataset utilizzato: [Severstal Competition, Kaggle](https://www.kaggle.com/c/severstal-steel-defect-detection/overview)"
    ]
   }
  ],
